# resona

./: .gitignore  LICENSE  README.md  bun.lockb  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  lib.rs  main.rs  models.rs
src-tauri/src/collections/: commands.rs  mod.rs  service.rs  types.rs
src-tauri/src/commands/: collection.rs  mod.rs  workspace.rs
src-tauri/src/db/: database.rs  error.rs  mod.rs  tables.rs
src-tauri/src/http/: client.rs  mod.rs  types.rs
src-tauri/src/requests/: commands.rs  mod.rs  service.rs  types.rs
src-tauri/src/settings/: commands.rs  mod.rs  service.rs  types.rs
src-tauri/src/storage/: collection.rs  mod.rs  workspace.rs
src-tauri/src/variables/: commands.rs  mod.rs  service.rs  types.rs
src-tauri/src/workspaces/: commands.rs  mod.rs  types.rs  workspace.rs
src/lib/: theme-switcher.ts
src/lib/components/: RequestPanel.svelte  ResponsePanel.svelte  Sidebar.svelte  WorkspaceCard.svelte  WorkspaceSelector.svelte  WorkspaceToolbar.svelte  app-sidebar.svelte  code-editor.svelte  duplicate-workspace-dialog.svelte  request-panel.svelte  response-panel.svelte  search-form.svelte  settings-dialog.svelte  variable-input.svelte  variables-panel.svelte  version-switcher.svelte  workspace-sidebar.svelte
src/lib/services/: collections.ts  http.ts  onboarding.ts  settings.ts  sync.ts  variables.ts  workspaces.ts
src/lib/stores/: collection.ts  workspace.ts
src/lib/types/: collection.ts  request.ts  response.ts  variable.ts  workspace.ts
src/lib/utils/: date.ts
src/routes/: +error.svelte  +layout.svelte  +page.svelte
src/stores/: index.ts
src/types/: index.ts
(+8 files in other folders)
