[package]
name = "Resona"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "resona"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [] }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.36", features = ["full"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
rusqlite = "0.32"

